# regret-based-heuristics

./: CMakeLists.txt
kotlin/: EdgeBasedBranchAndBounds.kt  GraphEdge.kt  LoadRegretData.kt  Permutation.kt  RegretBasedLocalSearchModelEvaluation.kt  ThreeOpt
src/: calc_cost_of_tsp.h  cost_record.h  edge_based_branch_and_bounds.h  graph_edge.h  main.cpp  pair.h  permutation.h  regret_based_local_search_model_evaluation.cpp  regret_data.h  three_opt_cycle.h  three_opt_operator.h
src/utility/: first.h  first_or_default.h  first_or_null.h  group_by.h  sort_by.h
